--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/e081c0a6dd.js"></script>
-    <title>Sen Nguyễn</title>
+    <title>BLACK Nguyễn</title>
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
     <link href="#" rel="shortcut icon" type="image/x-icon">
     <meta content="#" property="og:image">
-    <meta content="https://senthanh.github.io/" property="og:url">
+    <meta content="https://blackdzcuto.github.io/" property="og:url">
     <meta content="website" property="og:type">
-    <meta content="Senthanh" property="og:title">
+    <meta content="black" property="og:title">
     <meta content="Xây dựng và phát triển bởi Senthanh !" property="og:description">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
@@ -416,30 +416,30 @@
                             <div class="bio-story-thumb" style="background-image: url(&#x27;https://imgur.com/q8qqsAy.jpg&#x27;);"></div>
                             <div class="link-content">
                                 <p>Facebook</p>
-                                <span onclick="window.open(&#39;https://www.facebook.com/profile.php?id=100014811933322;, &#39;_blank&#39;)">@senthanh</span>
+                                <span onclick="window.open(&#39;https://www.facebook.com/racingboy23122007;, &#39;_blank&#39;)">@senthanh</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open(&#39;https://www.facebook.com/profile.php?id=100014811933322/&#39;, &#39;_blank&#39;)">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open(&#39;https://www.facebook.com/racingboy23122007/&#39;, &#39;_blank&#39;)">OPEN</div>
                             </div>
                         </div>
                         <div class="link-item">
                             <div class="bio-story-thumb" style="background-image: url(&#x27;https://imgur.com/1G4kS7D.jpg&#x27;);"></div>
                             <div class="link-content">
                                 <p>Instagram</p>
-                                <span onclick="window.open(&#39;https://www.instagram.com/senthanh/&#39;, &#39;_blank&#39;)">@senthanh</span>
+                                <span onclick="window.open(&#39;https://www.instagram.com/no/&#39;, &#39;_blank&#39;)">@senthanh</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open(&#39;https://www.instagram.com/senthanh/&#39;, &#39;_blank&#39;)">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open(&#39;https://www.instagram.com/no/&#39;, &#39;_blank&#39;)">OPEN</div>
                             </div>
                         </div>
                         <div class="link-item">
                             <div class="bio-story-thumb" style="background-image: url(&#x27;https://i.imgur.com/8eN7qqF.jpg&#x27;);"></div>
                             <div class="link-content">
                                 <p>Zalo</p>
-                                <span onclick="window.open(&#39;https://zalo.me/0865007727&#39;, &#39;_blank&#39;)">086 598 3826</span>
+                                <span onclick="window.open(&#39;https://zalo.me/0974052602&#39;, &#39;_blank&#39;)">086 598 3826</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open(&#39;https://zalo.me/0865007727&#39;, &#39;_blank&#39;)">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open(&#39;https://zalo.me/0974052602&#39;, &#39;_blank&#39;)">OPEN</div>
                             </div>
                         </div>
                         <div class="link-item">
@@ -456,10 +456,10 @@
                             <div class="bio-story-thumb" style="background-image: url(&#x27;https://i.imgur.com/k1Qbqxg.jpg&#x27;);"></div>
                             <div class="link-content">
                                 <p>Gmail</p>
-                                <span onclick="geturl(&#39;ts2005266@gmail.com&#39;)"ts2005266@gmail.com</span>
+                                <span onclick="geturl(&#39;blackremix69@gmail.com&#39;)"blackremix69@gmail.com</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-blue" onclick="geturl(&#39;ts2005266@gmail.com&#39;)">COPY</div>
+                                <div class="link-btn-chill light-blue" onclick="geturl(&#39;blackremix69@gmail.com&#39;)">COPY</div>
                             </div>
                         </div>
                     </div>
