--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="https://blackdzcuto.github.io/" property="og:url">
     <meta content="website" property="og:type">
     <meta content="black" property="og:title">
-    <meta content="Xây dựng và phát triển bởi Senthanh !" property="og:description">
+    <meta content="Xây dựng và phát triển bởi black !" property="og:description">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/gh/leanhducprovn/cdn/font-awesome/pro-5.15.3/css/all.css" rel="stylesheet">
@@ -20,10 +20,10 @@
         /* Chèn CSS vào đây */
         /*------------------------------------------------*/
         /* Name: Template giới thiệu bản thân version 8.0 */
-        /* Admin: Senthanh                        */
-        /* Zalo: 086 500 7727                             */
-        /* Gmail: ts20052@gmail.com       */
-        /* Website: https:senthanh.github.io         */
+        /* Admin: black                        */
+        /* Zalo: 097 405 2602                             */
+        /* Gmail: blackremix69@gmail.com       */
+        /* Website: https://blackdzcuto.github.io         */
         /*------------------------------------------------*/
         
         html,
